--- a/user-data-management/src/main/resources/application.properties
+++ b/user-data-management/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=user-data-management
+server.port=8089
+
+#data base connection details
+spring.datasource.url = jdbc:mysql://localhost:3306/product
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+
+#data JPA
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.show-sql =true
+#spring.jpa.database-platform= org.hibernate.dialect.MySQL8Dialect
+
+#logging
+#logging.level.com.cloud.vendor.service = DEBUG
+
+
